--- a/welcomepage.css
+++ b/welcomepage.css
@@ -54,3 +54,19 @@
 		width:5vmin;
 	}
 	
+	#leaderboard_link
+	{
+		color:red;
+		
+	}
+	#leaderboard_link_wrapper
+	{	
+		position:relative;
+		width:25vmin;
+		margin: 0;
+		left: 50%;
+		transform: translateX(-50%);
+		text-align:center;
+		font-size:5vmin;
+	}
+	
